# facedetect

./: .gitignore  CMakeLists.robust.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  facedetect  facedetect.cpp  vcpkg.json  voice_command.cpp  voice_command.h
